tests/style/bug_199_parse_errors_and_style/expected_out.txt
=== PLAIN MODE ===
test_1.m: error: file is not auto-fixed because it contains parse errors
In test_1.m, line 1
| % Taken from issue #199 (by alvinseville7cf)
|                                             ^ style: No copyright notice found in header
In test_1.m, line 5
| function z = f(x, a)
|              ^ error: script-global functions are an Octave-specific feature; move your functions to the end of the script file or use the --octave mode
In test_2.m, line 1
| % Taken from issue #199 (by alvinseville7cf)
|                                             ^ style: No copyright notice found in header
In test_2.m, line 16
| disp(a)
|       ^ style: end statement with a semicolon [fixed]
In test_2.m, line 18
| f(2, a)
|       ^ style: end statement with a semicolon [fixed]
In test_2.m, line 19
| f(4, a)
|       ^ style: end statement with a semicolon [fixed]
In test_2.m, line 20
| f(6, a)
|       ^ style: end statement with a semicolon [fixed]
In test_2.m, line 22
| function z = f(x, a)
|              ^ style: violates naming scheme for function
MISS_HIT Style Summary: 2 file(s) analysed, 7 style issue(s), 2 error(s)

=== HTML MODE ===
MISS_HIT Style Summary: 2 file(s) analysed, 7 style issue(s), 1 error(s)
